overflow for card container is fixed

--- a/src/main.scss
+++ b/src/main.scss
@@ -12,8 +12,8 @@ $background: #181b24;
   background-color: transparent;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  width: 90%;
+  height: 100vh;
+  width: 90vw;
 }
 
 @mixin desktop {
