--- a/src/pages/mobile/index.scss
+++ b/src/pages/mobile/index.scss
@@ -30,9 +30,9 @@
 .drawer {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   width: 100%;
-
+  overflow: hidden;
   background-color: $background;
   box-shadow: -10px 6px 11px rgba(0, 0, 0, 0.11);
   border-radius: 37px 0px 0px 0px;
@@ -64,9 +64,9 @@
   justify-content: center;
   align-items: center;
 
-  width: 80%;
-  height: 13%;
-  padding: 20px;
+  width: 70%;
+  height: 10%;
+  padding: 15px;
 
   margin: 43px 16px 0 16px;
 
@@ -95,6 +95,31 @@
   }
 }
 
-#noti-icon {
+#mobile-nav-card-noti-icon {
+  margin: 5px;
   width: 13%;
+}
+
+#mobile-nav-card-browse-icon {
+  margin: -10px;
+}
+
+#mobile-nav-card-docs-icon {
+  margin: -20px;
+}
+
+#mobile-nav-card-profile h1 {
+  margin: 25px;
+}
+
+#mobile-nav-card-notifications h1 {
+  margin: 45px;
+}
+
+#mobile-nav-card-browse h1 {
+  margin: 50px;
+}
+
+#mobile-nav-card-docs h1 {
+  margin: 60px;
 }
